Get media details (file resolution), rename 'Stars' to 'Cast', fix double scrollbar issue in iframes, add pyc to gitignore

--- a/_resources/css/common.css
+++ b/_resources/css/common.css
@@ -53,7 +53,7 @@ hr{
   width:100%;
   max-height:80%;
   height:580px;
-  overflow: auto;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
 }
 .modal-content{
